fix viewport width breaks on mobile/portrait and makes movement feel too fast

--- a/src/app/section/contact/contact.component.scss
+++ b/src/app/section/contact/contact.component.scss
@@ -71,13 +71,13 @@
     text-decoration: line-through;
 
     &:nth-child(1) .icon {
-      left: 50px;
+      left: 20px;
     }
     &:nth-child(2) .icon {
-      left: 35px;
+      left: 20px;
     }
     &:nth-child(3) .icon {
-      left: 40px;
+      left: 20px;
     }
   }
 
